--- a/static/styles.css
+++ b/static/styles.css
@@ -6,32 +6,32 @@ body {
 #top-row {
     background-color: #C8D8DE;
     position: absolute;
-    left: 4.688rem;
+    left: 75px;
     top: 0;
-    heigth: 5rem;
+    heigth: 80px;
     width: 100%;
     display: inline-block;
 }
 
 .rowtext {
     float:left;
-    margin-bottom: 0.313rem;
+    margin-bottom: 5px;
     margin-right: 20%;
     }
 
 .imageBlock {
-    max-height: 5rem;
-    max-width: 6.25rem;
+    max-height: 80px;
+    max-width: 100px;
     height: auto;
     width: auto;
     float: left;
-    margin: 0 0.313;
+    margin: 0 5px;
     border: 0;
 }
 
 .fotoPerfil {
-    max-height: 5rem;
-    max-width: 5rem;
+    max-height: 80px;
+    max-width: 80px;
     height: auto;
     width: auto;
     margin: 0;
@@ -42,30 +42,30 @@ body {
 .filter-bar {
     background-color: #EFEFEF;
     position: absolute;
-    top: 5.125rem;
-    left:4.688rem;
+    top: 82px;
+    left:75px;
     right: 0;
-    padding-left: 0.313rem;
+    padding-left: 5px;
     display: inline-block;
 }
 
 .okrBlock{
     border-style: groove;
     position: absolute;
-    top: 8.25rem;
-    left: 4.563rem;
+    top: 132px;
+    left: 73px;
     right: 0;
-    padding-left: 0.313rem;
-    height: 18.75rem;
+    padding-left: 5px;
+    height: 300px;
 }
 
 .progresso {
     position: absolute;
-    top: 28.125rem;
-    left: 4.563rem;
-    right: 0;
-    padding-left: 0.5rem;
-    height: 15.625rem;
+    top: 450px;
+    left: 73px;
+    right:0;
+    padding-left: 8px;
+    height: 250px;
 }
 
 .sidebar {
@@ -74,7 +74,7 @@ body {
     left: 0;
     bottom:0;
     background-color: #EAF6F6;
-    width: 4.375rem;
+    width: 70px;
     height: auto;
     border-style: groove;
 }
@@ -90,9 +90,9 @@ body {
     max-width: 70%;
     width: auto;
     height: auto;
-    margin: 0.313rem 0;
+    margin: 5px 0;
     border: none;
-    padding-left: 0.625rem;
+    padding-left: 10px;
 }
 
 .botaoMenuFundo {
@@ -100,14 +100,14 @@ body {
     max-width: 70%;
     width: auto;
     height: auto;
-    margin: 0.313rem 0;
+    margin: 5px 0;
     border: none;
     }
 
 .botaoFundo{
     position: absolute;
-    bottom: 0.625rem;
+    bottom: 10px;
     max-height: 90%;
     max-width: 90%;
-    padding-left: 0.188rem;
+    padding-left: 3px;
 }
