--- a/templates/index.html
+++ b/templates/index.html
@@ -4,43 +4,223 @@
     <title>Vini app</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
+    <!--Font Awsome Icons-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-</head>
-
-<body>
-  <!--TOPBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class = "navbar-brand" href="">OKR</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo">>
-
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class='nav-link' href=""> Contact </a></li>
-                <li class="nav-item"><a class='nav-link' href=""> Pricing </a></li>
-                <li class="nav-item"><a class='nav-link' href=""> <img src="static/imagens/perfil.jpg" alt=""> </a></li>
-            </ul>
-        </div>
-    </nav>
-
-
-  <!--TOPBAR-->
-
-   <!--SIDEBAR-->
-   
-   <!--SIDEBAR-->
-
-  <div class="height-100 bg-light">
-        <h4>Main Components</h4>
-  </div>
+    <link rel="stylesheet" href="static/styles.css">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+</head>
+
+<body>
+        <div class="d-flex" id="wrapper">
+            <!-- Sidebar-->
+            <div class="border-end bg-danger" id="sidebar-wrapper">
+                <div class="sidebar-heading border-bottom bg-light p-5">Project Logo</div>
+                <div class="list-group list-group-flush">
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/perfil.html"> <i class="fa fa-user-circle"></i>  Perfil</a>
+					<a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/perfil.html"> <i class="fa fa-pencil-square"></i> Cadastro OKR</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/perfil.html"> <i class="fa fa-dashboard"></i> Dashboard</a>
+
+                    <div class="mt-05">
+                        <a class="list-group-item list-group-item-action list-group-item-light " href="templates/settings.html"><i class="fa fa-gear"></i> Configurações</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Sidebar-->
+
+            <!-- Page content wrapper-->
+            <div id="page-content-wrapper" style="width: 100%">
+                <!-- Top navigation-->
+                <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+                    <div class="container-fluid">
+                        <img src="static/imagens/perfil.jpg" id="fotoPerfil">
+                        <div class="m-2" id="rowtext ">
+                            <h3>joe</h3>
+                            <h5>cargo de joe</h5>
+                        </div>
+                        <div class="container" style="width: 25%; text-align: center">
+                            <h6>Progresso Geral</h6>
+                            <div class="progress">
+                                <div class="progress-bar bg-success" style="width: 25%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                       <div class="dropdown">
+                           <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Time Selecionado</button>
+                           <ul class="dropdown-menu">
+                               <li><a class="dropdwon-item">Time 1</a></li>
+                               <li><a class="dropdwon-item">Time 2</a></li>
+                               <li><a class="dropdwon-item">Time 3</a></li>
+
+                           </ul>
+                       </div>
+                    </div>
+                </nav>
+                <!-- Top navigation-->
+
+                <!-- Page content-->
+                <div class="container-fluid mt-2">
+                    <!--#1 Bloco de OKR-->
+                    <div class="row" style="">
+                        <div class="col-12" style="">
+
+
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingOne">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <strong> Objetivo #1 </strong>
+                                        </button>
+                                    </h2>
+                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <table class="table" style="text-align: center;">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Resultado Chave</th>
+                                                        <th scope="col">Responsável</th>
+                                                        <th scope="col">inicial</th>
+                                                        <th scope="col">meta</th>
+                                                        <th scope="col">atual</th>
+                                                        <th scope="col">Gráfico</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>KR 1</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 5 </td>
+                                                        <td> 2 </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>KR 2</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 100% </td>
+                                                        <td> 30% </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                       <td>KR 3</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 70 </td>
+                                                        <td> 15 </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                     </div>
+                                </div>
+                                <!-- FIM ITEM 1 ACCORDION -->
+
+                                <!-- FIM ITEM 2 ACCORDION -->
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingTwo">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <strong> Objetivo #2 </strong>
+                                        </button>
+                                    </h2>
+                                    <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <table class="table" style="text-align: center;">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Resultado Chave</th>
+                                                        <th scope="col">Responsável</th>
+                                                        <th scope="col">inicial</th>
+                                                        <th scope="col">meta</th>
+                                                        <th scope="col">atual</th>
+                                                        <th scope="col">Gráfico</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>KR 1</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 5 </td>
+                                                        <td> 2 </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>KR 2</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 100% </td>
+                                                        <td> 30% </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                       <td>KR 3</td>
+                                                        <td>Vinícius</td>
+                                                        <td> 0 </td>
+                                                        <td> 70 </td>
+                                                        <td> 15 </td>
+                                                        <td>
+                                                            <div class="progress">
+                                                                <div class="progress-bar bg-success" style="width: 40%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                     </div>
+                                </div>
+                                <!-- FIM ITEM 2 ACCORDION -->
+
+                            </div>
+                            <!--FIM ACCORDION -->
+
+                        </div>
+
+                        </div>
+                    </div>
+                    <!--#2 Bloco de OKR-->
+            </div>
+        </div>
+
+
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 
 </body>
 </html>
