--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -23,7 +23,7 @@
                 <div class="list-group list-group-flush">
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/perfil.html"> <i class="fa fa-user-circle"></i>  Perfil</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/atualizarkr.html"> <i class="fa fa-dashboard"></i> Atualizar KR</a>
-					<a class="list-group-item list-group-item-action list-group-item-light p-3" href="/cadastrar"> <i class="fa fa-pencil-square"></i> Cadastrar OKR</a>
+					<a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/cadastrar.html"> <i class="fa fa-pencil-square"></i> Cadastrar OKR</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="templates/dashboard.html"> <i class="fa fa-dashboard"></i> Dashboard</a>
 
                     <div class="mt-05">
@@ -31,10 +31,10 @@
                     </div>
                 </div>
             </div>
-            <!-- Sidebar-->
 
+            <!-- Sidebar-->
             <!-- Page content wrapper-->
-            <div id="page-content-wrapper" style="width: 80%">
+            <div id="page-content-wrapper" style="width: 100%">
                 <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
@@ -63,77 +63,33 @@
                 </nav>
                 <!-- Top navigation-->
 
-                <!-- Page content-->
-                <div class="container-fluid mt-2">
-                    <!--Bloco de OKR-->
-                    <div class="row" style="">
-                        <div class="col-12" style="">
+                <!--Page Content -->
+                <div>
+                    <form action="/login" method="post">
+                        <div class="col-3 mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Setor</label>
+                            <input name='setor_input' type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
+                            <label for="exampleInputEmail2" class="form-label">Objetivo</label>
+                            <input name='objetivo_input' type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
 
-                            {%for o in objetivos:%}
-                            <div class="accordion" id="accordionExample">
-                              <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingOne">
-                                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    {{o.texto}}
-                                  </button>
-                                </h2>
-                                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                  <div class="accordion-body">
-                                    <table class="table" style="text-align: center;">
-                                      <thead>
-                                        <tr>
-                                          <th scope="col">#</th>
-                                          <th scope="col">Resultado Chave</th>
-                                          <th scope="col">Responsável</th>
-                                          <th scope="col">inicial</th>
-                                          <th scope="col">meta</th>
-                                          <th scope="col">atual</th>
-                                          <th scope="col">Gráfico</th>
-                                        </tr>
-                                      </thead>
-                                      <tbody>
-                                      {%for k in krs:%}
-                                        {%if k.id_obj == o.id:%}
-                                        <tr>
-                                          <th scope="row">{{k.num}}</th>
-                                          <td>{{k.texto}}</td>
-                                          <td>{{k.responsavel}}</td>
-                                          <td>{{k.inicial}}</td>
-                                          <td>{{k.meta}}</td>
-                                          <td>{{k.atual}}</td>
-                                          <td>
-                                          <div class="progress">
-                                            <div class="progress-bar bg-success" style="width: {{k.p}}%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                          </td>
-                                        </tr>
-                                        {%endif%}
-                                      {%endfor%}
-                                      </tbody>
-                                    </table>
-                                  </div>
-                                </div>
-                              </div>
-                              {%endfor%}
-                                <!-- FIM ITEM 2 ACCORDION -->
-
-                            </div>
-                            <!--FIM ACCORDION -->
-
+                             <label for="exampleInputEmail3" class="form-label">KR 1</label>
+                            <input name='KR1_input' type="text" class="form-control" id="exampleInputEmail3" aria-describedby="emailHelp">
                         </div>
 
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div>
-                    </div>
-                    <!--Fim Bloco de OKR-->
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+                <!--Page Content -->
             </div>
         </div>
 
-
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 </body>
-</html>
