--- a/templates/atualizar.html
+++ b/templates/atualizar.html
@@ -1,16 +1,5 @@
-<!doctype html>
-<html lang="pt">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <!-- Bootstrap link-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- font awsome link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- meu css link -->
-    <link rel="stylesheet" href="../static/css/style4.css">
-  </head>
+{% include "header.html"%}
+
   <body>
         <div class="wrapper" >
 
@@ -57,10 +46,9 @@
               </div>
           </nav>
 
-          <form>
+          <form action="/atualizar" method="post">
               <label  class="form-label">Selecione Setor dono do OKR</label>
-              <select class="form-select" aria-label="Default select example">
-
+              <select class="form-select" aria-label="Default select example" name="setor">
                   <option value="1">Setor 1</option>
                   <option value="2">Setor 2</option>
                   <option value="3">Setor 3</option>
@@ -68,8 +56,7 @@
               </select>
               <br>
               <label  class="form-label">Selecione o OKR a ser atualizado</label>
-              <select class="form-select" aria-label="Default select example">
-
+              <select class="form-select" aria-label="Default select example" name="okr">
                   <option selected>okr1</option>
                   <option value="1">okr2</option>
                   <option value="2">okr3</option>
@@ -77,8 +64,7 @@
               </select>
               <br>
               <label class="form-label">Selecione o KR a ser atualizado</label>
-              <select class="form-select" aria-label="Default select example">
-
+              <select class="form-select" aria-label="Default select example" name="kr">
                   <option selected>KR1</option>
                   <option value="1">KR2</option>
                   <option value="2">KR3</option>
@@ -89,13 +75,13 @@
                   <div class="col-8">
                       <div class="">
                         <label class="form-label">Problema/Progresso/Plano</label>
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea class="form-control" rows="3" name="ppp"></textarea>
                       </div>
                   </div>
                   <div class="col-3">
                       <div class="">
                         <label class="form-label">Valor atual: {{valor}}</label>
-                        <textarea class="form-control"  rows="1"></textarea>
+                        <textarea class="form-control"  rows="1" name="v_atual"></textarea>
                       </div>
                   </div>
               </div>
@@ -126,3 +112,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
+
+{% include "footer.html"%}
