--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -1,19 +1,4 @@
-<!doctype html>
-<html lang="pt">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <!-- Bootstrap link-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- font awsome link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- meu css link -->
-    <link rel="stylesheet" href="../static/css/style4.css">
-    <link href="../static/js/front.js">
-    <!-- Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  </head>
+{% include "header.html"%}
   <body>
         <div class="wrapper" >
 
@@ -62,7 +47,7 @@
 
           <form>
               <label  class="form-label">Selecione o Setor do Novo OKR</label>
-              <select id="okr_setor" class="form-select" aria-label="Default select example">
+              <select class="form-select" aria-label="Default select example">
 
                   <option value="1">Setor 1</option>
                   <option value="2">Setor 2</option>
@@ -70,7 +55,7 @@
                   <option value="4">Setor 4</option>
               </select>
               <br>
-              <label id="okr_texto" class="form-label">Texto do OKR </label>
+              <label class="form-label">Texto do OKR </label>
               <textarea class="form-control" rows="2"></textarea>
               <br>
 
@@ -125,7 +110,9 @@
                                                         "texto": texto,
                                                         "ano": ano,
                                                         "trimestre": trimestre})
-
+                            })
+                        })
+                    })
                 </script>
             </h1>
 
@@ -149,6 +136,4 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% include "footer.html"%}
