wtforms no monitorar

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -11,8 +11,7 @@
           </div>
           <hr>
           <ul class="list-unstyled components">
-            <li> <a href={{url_for('monitorar')}}> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
-            <li>  <a href={{url_for('atualizar')}}> <i class="fa fa-pencil-square-o"></i> Atualizar </a>  </li>
+            <li> <a href={{url_for('home')}}> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
             <li class="active">  <a href="#"> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
             <li>  <a href="#"> <i class="fa fa-dashboard"></i> Dashboard </a>  </li>
             <li>  <a href="#">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
