--- a/templates/atualizar.html
+++ b/templates/atualizar.html
@@ -1,116 +1,80 @@
 {% include "header.html"%}
 
-  <body>
-        <div class="wrapper" >
+<body>
+    <div class="wrapper" >
+        <!-- Sidebar-->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h2>Logo Projeto</h2>
+                <strong>TS</strong>
+            </div>
+            <hr>
+            <ul class="list-unstyled components">
+                <li> <a href={{url_for('home')}}> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
+                <li>  <a href={{url_for('cadastrar')}}> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
+                <li>  <a href="#"> <i class="fa fa-dashboard"></i> Dashboard </a>  </li>
+                <li>  <a href="#">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
+                <li>  <a href="#">  <i class="fa fa-paper-plane"></i>  Contact </a>  </li>
+            </ul>
+        </nav>
 
-      <!-- Sidebar-->
-      <nav id="sidebar">
-
-          <div class="sidebar-header">
-            <h2>Logo Projeto</h2>
-            <strong>TS</strong>
-          </div>
-          <hr>
-          <ul class="list-unstyled components">
-            <li> <a href={{url_for('monitorar')}}> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
-            <li class="active">  <a href="#"> <i class="fa fa-pencil-square-o"></i> Atualizar </a>  </li>
-            <li>  <a href={{url_for('cadastrar')}}> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
-            <li>  <a href="#"> <i class="fa fa-dashboard"></i> Dashboard </a>  </li>
-            <li>  <a href="#">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
-            <li>  <a href="#">  <i class="fa fa-paper-plane"></i>  Contact </a>  </li>
-          </ul>
-
-      </nav>
-
-
-      <!-- Page Content -->
-      <div id="content">
-
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <div class="container-fluid">
-
-                   <div class="m-2" id="rowtext ">
+        <!-- Page Content -->
+        <div id="content">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <div class="m-2" id="rowtext ">
                         <h3>Vinícius</h3>
                         <h6>Econômica</h6>
-                   </div>
-
-                  <div class="dropdown">
-                       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                           Empresa Econômica</button>
-                       <ul class="dropdown-menu">
-                           <li><a class="dropdwon-item">Setor 1</a></li>
-                           <li><a class="dropdwon-item">Setor 2</a></li>
-                       </ul>
-                  </div>
-
-              </div>
-          </nav>
-
-          <form action="/atualizar" method="post">
-              <label  class="form-label">Selecione Setor dono do OKR</label>
-              <select class="form-select" aria-label="Default select example" name="setor">
+                    </div>
+                </div>
+            </nav>
+            {{ render_form(form) }}
+            <form action="{{url_for('home')}}" method="post">
+                <label  class="form-label">Selecione Setor dono do OKR</label>
+                <select class="form-select" aria-label="Default select example" name="setor">
                   <option value="1">Setor 1</option>
                   <option value="2">Setor 2</option>
                   <option value="3">Setor 3</option>
                   <option value="4">Setor 4</option>
-              </select>
-              <br>
-              <label  class="form-label">Selecione o OKR a ser atualizado</label>
-              <select class="form-select" aria-label="Default select example" name="okr">
+                </select>
+                <br>
+                <label  class="form-label">Selecione o OKR a ser atualizado</label>
+                <select class="form-select" aria-label="Default select example" name="okr">
                   <option selected>okr1</option>
                   <option value="1">okr2</option>
                   <option value="2">okr3</option>
                   <option value="3">okr4</option>
-              </select>
-              <br>
-              <label class="form-label">Selecione o KR a ser atualizado</label>
-              <select class="form-select" aria-label="Default select example" name="kr">
-                  <option selected>KR1</option>
-                  <option value="1">KR2</option>
-                  <option value="2">KR3</option>
-                  <option value="3">KR4</option>
-              </select>
-              <br>
-              <div class="row">
-                  <div class="col-8">
-                      <div class="">
-                        <label class="form-label">Problema/Progresso/Plano</label>
-                        <textarea class="form-control" rows="3" name="ppp"></textarea>
-                      </div>
-                  </div>
-                  <div class="col-3">
-                      <div class="">
-                        <label class="form-label">Valor atual: {{valor}}</label>
-                        <textarea class="form-control"  rows="1" name="v_atual"></textarea>
-                      </div>
-                  </div>
-              </div>
-              <br>
-              <button type="submit" class="btn btn-primary">Submit</button>
+                </select>
+                <br>
+                <label class="form-label">Selecione o KR a ser atualizado</label>
+                <select class="form-select" aria-label="Default select example" name="kr">
+                    <option selected>KR1</option>
+                    <option value="1">KR2</option>
+                    <option value="2">KR3</option>
+                    <option value="3">KR4</option>
+                </select>
+                <br>
+                <div class="row">
+                    <div class="col-8">
+                        <div class="">
+                            <label class="form-label">Problema/Progresso/Plano</label>
+                            <textarea class="form-control" rows="3" name="ppp"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="">
+                            <label class="form-label">Valor atual: {{valor}}</label>
+                            <textarea class="form-control"  rows="1" name="v_atual"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-
-
-              <div class="line" id=""></div>
-
-              <h2> Ipsum</h2>
-              <p>Ipsum</p>
-
-              <div class="line"></div>
-
-              <h2>Lorem Ipsum Dolor</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-              <div class="line"></div>
-
-              <h3>Lorem Ipsum Dolor</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-
+        </div>
     </div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
-</html>
+</body>
+
 
 {% include "footer.html"%}
