--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -11,11 +11,11 @@
           </div>
           <hr>
           <ul class="list-unstyled components">
-            <li> <a href={{url_for('home')}}> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
-            <li class="active">  <a href="#"> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
-            <li>  <a href="#"> <i class="fa fa-dashboard"></i> Dashboard </a>  </li>
-            <li>  <a href="#">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
-            <li>  <a href="#">  <i class="fa fa-paper-plane"></i>  Contact </a>  </li>
+            <li> <a href="{{url_for('home')}}"> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
+            <li class="active"> <a href={{url_for('cadastrar')}}> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
+            <li>  <a href="{{url_for('dashboard')}}"> <i class="fa fa-dashboard"></i> Dashboards </a>  </li>
+            <li>  <a href="{{url_for('perfil')}}">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
+            <li>  <a href="{{url_for('contato')}}">  <i class="fa fa-paper-plane"></i>  Contacto </a>  </li>
           </ul>
 
       </nav>
