--- a/templates/atualizar.html
+++ b/templates/atualizar.html
@@ -28,18 +28,20 @@
                     </div>
                 </div>
             </nav>
-            <h1>KR: {{ kr.texto }}</h1>
-            <br>
-            <div class="row">
-                <div class="col">
-                    <h3>Meta: {{ kr.meta }}</h3>
+            <form action="{{url_for('atualizar')}}" method="post">
+                <input type="hidden" name="kr_id" value=" {{kr.id_kr}}">
+                <label class="form-label">KR:</label>
+                <input type="text" class="form-control" name="kr_texto" value="{{ kr.texto }}">
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <label class="form-label">Meta:</label>
+                        <input type="number" class="form-control" name="kr_meta" value="{{ kr.meta }}">
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Valor Atual: {{ kr.atual }} </label>
+                    </div>
                 </div>
-                <div class="col">
-                    <h3>Atual: {{ kr.atual }}</h3>
-                </div>
-            </div>
-            <form action="{{url_for('home')}}" method="post">
-
                 <br>
                 <div class="row">
                     <div class="col-8">
@@ -50,13 +52,13 @@
                     </div>
                     <div class="col-3">
                         <div class="">
-                            <label class="form-label">Valor atual: {{valor}}</label>
-                            <textarea class="form-control"  rows="1" name="v_atual"></textarea>
+                            <label class="form-label">Novo Valor:</label>
+                            <textarea class="form-control"  rows="1" name="novo_valor"></textarea>
                         </div>
                     </div>
                 </div>
                 <br>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Atualizar</button>
             </form>
         </div>
     </div>
