--- a/templates/atualizar.html
+++ b/templates/atualizar.html
@@ -23,8 +23,8 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <div class="m-2" id="rowtext ">
-                        <h3>Usuário</h3>
-                        <h6>Empresa</h6>
+                    <h3>{{user_name}}</h3>
+                    <h6>{{user_time}}</h6>
                     </div>
                 </div>
             </nav>
