--- a/templates/monitorar.html
+++ b/templates/monitorar.html
@@ -1,59 +1,55 @@
 {% include "header.html"%}
 {% from 'bootstrap5/form.html' import render_form %}
-  <body>
-    <div class="wrapper" >
-
-      <!-- Sidebar-->
-      <nav id="sidebar">
-
-          <div class="sidebar-header">
+<body>
+<div class="wrapper" >
+    <!-- Sidebar-->
+    <nav id="sidebar">
+        <div class="sidebar-header">
             <h2>Logo Projeto</h2>
             <strong>TS</strong>
-          </div>
-          <hr>
-          <ul class="list-unstyled components">
+        </div>
+        <hr>
+        <ul class="list-unstyled components">
             <li class="active"> <a href="{{url_for('home')}}"> <i class="fa fa-bar-chart"></i> Monitorar </a>  </li>
             <li>  <a href={{url_for('cadastrar')}}> <i class="fa fa-copy"></i> Cadastrar </a>  </li>
             <li>  <a href="{{url_for('dashboard')}}"> <i class="fa fa-dashboard"></i> Dashboards </a>  </li>
             <li>  <a href="{{url_for('perfil')}}">  <i class="fa fa-user-circle-o"></i>  Perfil  </a>  </li>
             <li>  <a href="{{url_for('contato')}}">  <i class="fa fa-paper-plane"></i>  Contacto </a>  </li>
-          </ul>
-
-      </nav>
-
-
-      <!-- Page Content -->
-      <div id="content">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="container-fluid">
-
-                       <div class="m-2" id="rowtext ">
-                            <h3>Usuário</h3>
-                            <h6>Time</h6>
-                       </div>
-                       <div class="container" style="width: 25%; text-align: center">
-                            <h6>Progresso Geral</h6>
-                            <div class="progress">
-                                <div class="progress-bar bg-success" style="width: {{media_total}}%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">{{media_total}}</div>
-                            </div>
-                       </div>
-                      <!--
-                      <div class="dropdown">
-                           <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                               usuario[0].time[0]</button>
-                           <ul class="dropdown-menu">
-                               usuario[0].time
-                               <li><a class="dropdwon-item">usuario[0].time[t]</a></li>
-                           </ul>
-                      </div>
-                      -->
-                  </div>
-              </nav>
+        </ul>
+    </nav>
 
 
-              <!--OKR-->
-               <div class="accordion" id="">
-                     {% for okr in okr %}
+    <!-- Page Content -->
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="m-2" id="rowtext ">
+                    <h3>{{user_name}}</h3>
+                    <h6>{{user_time}}</h6>
+                </div>
+                <div class="container" style="width: 25%; text-align: center">
+                    <h6>Progresso Geral</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" style="width: {{media_total}}%" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">{{media_total}}</div>
+                    </div>
+                </div>
+                <!--
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        usuario[0].time[0]
+                    </button>
+                    <ul class="dropdown-menu">
+                        usuario[0].time
+                        <li><a class="dropdwon-item">usuario[0].time[t]</a></li>
+                    </ul>
+                </div>
+                -->
+                </div>
+                </nav>
+
+                <!--OKR-->
+                <div class="accordion" id="">
+                    {% for okr in okr %}
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -65,7 +61,7 @@
                               <table class="table" >
                                   <thead>
                                       <tr>
-
+                                        <th scope="col">#</th>
                                         <th scope="col">kr</th>
                                         <th scope="col">Inicial</th>
                                         <th scope="col">Meta</th>
@@ -78,13 +74,13 @@
                                   {% for kr in krs %}
                                   {% if kr.id_obj == okr.id %}
                                       <tr>
+                                          <td>{{kr+1}}</td>
                                           <td>{{ kr.texto }}</td>
                                           <td>{{ kr.inicial }}</td>
                                           <td>{{ kr.meta }}</td>
                                           <td>{{ kr.atual }}</td>
                                           <td>{{ kr.porcentagem }}</td>
                                           <td><a href="{{ url_for('atualizar', idp=kr.id_kr) }}">Atualizar</a></td>
-
                                       </tr>
                                   {% endif %}
                                   {% endfor %}
@@ -94,21 +90,8 @@
                       </div>
                     </div>
                    {% endfor %}
-
                </div>
-
-              <div class="line" id="blankSpace"></div>
-
-              <h2> </h2>
-              <p></p>
-
-              <div class="line"></div>
-
-              <h2>Lorem Ipsum Dolor</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          </div>
-
-    </div>
+      </div>
+</div>
 
 {% include "footer.html"%}
